--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="4.0">
     <context-param>
         <param-name>dbURL</param-name>
-        <param-value>jdbc:postgresql://localhost:5432/my_web_app</param-value>
+        <param-value>jdbc:postgresql://localhost:5432/web_app</param-value>
     </context-param>
     <context-param>
         <param-name>postgres</param-name>
